Added API to get all schemasets from a dataspace
Issue-ID: CPS-1187
